# lib/api-spec/openapi.yaml
@@ -126,21 +126,25 @@ paths:
               schema:
                 $ref: '#/components/schemas/Organization'
 
-  /organizations/{slug}/join:
+  /organizations/join:
     post:
-      operationId: joinOrganization
+      operationId: joinOrganizationByCode
       tags: [Organizations]
       security:
         - bearerAuth: []
-      parameters:
-        - { name: slug, in: path, required: true, schema: { type: string } }
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/JoinOrgInput'
       responses:
         '200':
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/OrgMember'
+                $ref: '#/components/schemas/Organization'
 
   /organizations/{slug}/members:
     get:
@@ -466,11 +470,12 @@ components:
   schemas:
     SignupInput:
       type: object
-      required: [email, password, name]
+      required: [email, password, name, role]
       properties:
         email: { type: string }
         password: { type: string }
         name: { type: string }
+        role: { type: string, enum: [organizer, voter] }
 
     LoginInput:
       type: object
@@ -481,11 +486,12 @@ components:
 
     User:
       type: object
-      required: [id, email, name, emailVerified, phoneVerified, verificationLevel, createdAt]
+      required: [id, email, name, role, emailVerified, phoneVerified, verificationLevel, createdAt]
       properties:
         id: { type: integer }
         email: { type: string }
         name: { type: string }
+        role: { type: string, enum: [organizer, voter] }
         phone: { type: string }
         emailVerified: { type: boolean }
         phoneVerified: { type: boolean }
@@ -503,11 +509,12 @@ components:
 
     Organization:
       type: object
-      required: [id, name, slug, isPublic, ownerId, memberCount, electionCount, createdAt]
+      required: [id, name, slug, accessCode, isPublic, ownerId, memberCount, electionCount, createdAt]
       properties:
         id: { type: integer }
         name: { type: string }
         slug: { type: string }
+        accessCode: { type: string }
         description: { type: string }
         logoUrl: { type: string }
         isPublic: { type: boolean }
@@ -556,6 +563,12 @@ components:
       required: [role]
       properties:
         role: { type: string }
+
+    JoinOrgInput:
+      type: object
+      required: [accessCode]
+      properties:
+        accessCode: { type: string }
 
     Candidate:
       type: object
